--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "incubator-backend",
+  "name": "smart-home-backend",
   "version": "1.0.0",
-  "description": "Backend API para el sistema de control de incubadora.",
+  "description": "API para el sistema de control de hogar inteligente.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "axios": "^1.3.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql": "^2.18.1"
