--- a/src/frontend/nginx.conf
+++ b/src/frontend/nginx.conf
@@ -2,19 +2,34 @@ server {
     listen 80;
     server_name localhost;
 
-    # Directorio raíz donde se encuentran los archivos del frontend
+    # Directorio raíz donde se encuentran los archivos del frontend (index.html, css, js)
     root /usr/share/nginx/html;
     index index.html;
 
+    # Regla para servir los archivos estáticos y la SPA (Single Page Application)
+    # Si no encuentra un archivo o directorio, devuelve index.html
     location / {
-        # Intenta servir el archivo solicitado directamente,
-        # luego como un directorio, y si no, devuelve index.html.
-        # Esto es clave para que funcionen las Single Page Applications.
         try_files $uri $uri/ /index.html;
     }
 
-    # Cache para archivos estáticos
-    location ~* \.(css|js|ico|png|jpg|jpeg|gif)$ {
+    # --- BLOQUE DE PROXY INVERSO (REVERSE PROXY) ---
+    # Esta es la configuración clave que soluciona el error de conexión.
+    # Redirige todas las peticiones que empiezan con /api al contenedor del backend.
+    location /api {
+        # 'backend' es el nombre del servicio definido en docker-compose.yml.
+        # Docker usa este nombre para resolver la IP interna del contenedor del backend.
+        proxy_pass http://backend:3000;
+
+        # Cabeceras necesarias para mantener la conexión
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Opcional: Optimización de caché para archivos estáticos
+    location ~* \.(css|js|png|jpg|jpeg|gif|ico)$ {
         expires 1y;
         add_header Cache-Control "public";
     }
